@@ -41,8 +41,8 @@ ext.moduleName = 'stroom.expression'
 group = 'stroom'
 version = versions.stroomExpression
 
-sourceCompatibility = 1.10
-targetCompatibility = 1.10
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
 
 repositories {
     mavenLocal()
@@ -72,58 +72,6 @@ def pomConfig = {
     scm {
         url "https://github.com/stroom/stroom-expression"
     }
-}
-
-compileJava {
-    inputs.property("moduleName", moduleName)
-    doFirst {
-        options.compilerArgs = [
-                '--module-path', classpath.asPath,
-                '--add-modules', 'slf4j.api',
-        ]
-        classpath = files()
-    }
-}
-
-compileTestJava {
-    inputs.property("moduleName", moduleName)
-    doFirst {
-        options.compilerArgs = [
-                '--module-path', classpath.asPath,
-//                '--add-modules', 'junit',
-//                '--add-reads', "$moduleName=junit",
-                '--patch-module', "$moduleName=" + files(sourceSets.test.java.srcDirs).asPath,
-        ]
-        classpath = files()
-    }
-}
-
-test {
-    inputs.property("moduleName", moduleName)
-    doFirst {
-        jvmArgs = [
-                '--module-path', classpath.asPath,
-                '--add-modules', 'ALL-MODULE-PATH',
-//                '--add-reads', "$moduleName=junit",
-                '--patch-module', "$moduleName=" + files(sourceSets.test.java.outputDir).asPath,
-        ]
-        classpath = files()
-    }
-}
-
-javadoc {
-    options.addStringOption('-module-path', classpath.asPath)
-    options.addStringOption('Xdoclint:all,-missing', '-html5')
-}
-
-jar {
-    inputs.property("moduleName", moduleName)
-    manifest {
-        attributes(
-                "Automatic-Module-Name": moduleName,
-        )
-    }
-    version versions.stroomExpression
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
